# embed-db

./: Cargo.toml  README.md
src/: actor.rs  launched.rs  lib.rs
tests/: basic.rs
